@@ -19,6 +19,7 @@ private:
   int RipChunk(int& nPercent);
   bool Rip(const CStdString& strTrackFile, const CStdString& strFileName, MUSIC_INFO::CMusicInfoTag& infoTag);
   char* GetExtension(int iEncoder);
+  CStdString GetTrackName(CFileItem *item, bool isFatX);
 
   CEncoder* m_pEncoder;
   CCDDAReader m_cdReader;
