@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 05-06-2006 changed: Settings cleanup (simplified programs + video auto-switching, removed some that are no longer necessary)
+ - 05-06-2006 changed: Use Track number changed to Track Format in Rip CD settings.
  - 05-06-2006 changed: TDATA\0face008\settings.xml moved to UserData\guisettings.xml.
  - 05-06-2006 fixed: RealMedia video playback. Reverted dll.cpp in Dllloader to revision 1.42.
  - 04-06-2006 changed: single item playlists are treated as playlists (not files) when playlistasfolder is false.
